<resources>
    <string name="app_name">orm-example</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="detail">Detail</string>
    <string name="date">Date</string>
    <string name="completed">Completed</string>
    <string name="created_by">Created by</string>
    <string name="edit">Edit</string>
    <string name="invalid_email_password">Invalid email/password</string>
    <string name="email_x_already_exists">Emai \'%s\' already exists</string>
    <string name="register_error_verify_informations">%s, wasn\'t possible to register now, please verify your informations</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
</resources>
