<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".ui.task.TaskDetailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date" />

    <Button
        android:id="@+id/activity_task_detail_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showDatePicker" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <EditText
        android:id="@+id/activity_task_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/activity_task_detail_completed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/completed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/created_by" />

    <TextView
        android:id="@+id/activity_task_detail_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:onClick="edit"
        android:text="@string/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>